--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:4.0.1'
     compile 'com.google.android.gms:play-services:4.2.42'
     compile 'com.android.support:appcompat-v7:19.+'
+    compile 'uk.co.chrisjenx:calligraphy:0.7.+'
+    compile 'com.squareup.picasso:picasso:2.1.1'
 }
