--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 19
     buildToolsVersion "19.0.3"
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 19
@@ -26,4 +31,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'uk.co.chrisjenx:calligraphy:0.7.+'
     compile 'com.squareup.picasso:picasso:2.1.1'
+    compile 'com.squareup.retrofit:retrofit:1.3.0'
+    compile 'com.octo.android.robospice:robospice-retrofit:1.4.9'
+    compile 'com.google.code.gson:gson:2.2.2'
 }
