--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion "19.1.0"
 
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 19
+        targetSdkVersion 20
         versionCode 1
         versionName "1.0"
     }
@@ -27,11 +27,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v13:19.+'
     compile 'com.jakewharton:butterknife:4.0.1'
-    compile 'com.google.android.gms:play-services:4.2.42'
+    compile 'com.google.android.gms:play-services:+'
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'uk.co.chrisjenx:calligraphy:0.7.+'
     compile 'com.squareup.picasso:picasso:2.1.1'
     compile 'com.squareup.retrofit:retrofit:1.3.0'
     compile 'com.octo.android.robospice:robospice-retrofit:1.4.9'
-    compile 'com.google.code.gson:gson:2.2.2'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
